# ealabs-notes-backend

./: .env.example  .gitignore  Makefile  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
ealabs_notes_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: env.py
migrations/versions/: afb6e5aae612_initial_schema.py
scripts/: create-buckets.sh
tests/: test_main.py
